Fix an align-center but due to removing v-center class

--- a/style.css
+++ b/style.css
@@ -85,6 +85,10 @@ select {
     justify-content: center;
 }
 
+.align-items {
+    align-items: center;
+}
+
 .flex-wrap {
     flex-wrap: wrap;
 }
